--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>index.html</title>
 </head>
 <body>
-    <p style="text-align:center;margin-top:200px;font-size: 24px;">Thanks for reviewing my ugly code.</p>
+    <p>Thanks for reviewing my ugly code.</p>
 </body>
 </html>
